<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart inskolning</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="menu_start_page">Start page</string>
    <string name="menu_here_we_are">Here we are</string>
    <string name="menu_routine">Routine</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_equipment">Equipment</string>
    <string name="menu_about_child">About child</string>
    <string name="menu_evaluation">Evaluation</string>
    <string name="menu_contact">Contact</string>
    <string name="title_activity_activity__welcome">Activity_Welcome</string>
    <string name="already_in_screen">You are already in this menu</string>
    <string name="title_activity_activity__contacts">Activity_Contacts</string>
    <string name="title_activity_activity__schedule">Activity_Schedule</string>
    <string name="title_activity_activity__equipment">Activity_Equipment</string>
    <string name="title_activity_activity__here__we_are">Activity_Here_We_are</string>
    <string name="title_activity_activity__about__child">Activity_About_Child</string>
    <string name="title_activity_activity__routine">Activity_Routine</string>
    <string name="title_activity_activity__evaluation">Activity_Evaluation</string>
    <string name="menu_routine_title">Information on routins</string>
    <string name="menu_routine_message">\nDay 1-5 on the induction are the Guardians with their child most of the day to help the child feel safe.
    \n\n
    Day 6-7 it is time for the guardians to leave their child on the preschool for a day. It is important that the guardians can be reached on the phone and pick up the child if needed.
    \n\n
    More information is given the day you come to the preschool, including the schedule.\n</string>
    <string name="menu_routine_number">0735059033</string>
    <string name="menu_routine_questions_call">For questions call: </string>
    <string name="wrong_login_details">You entered the wrong username or password</string>
    <string name="no_input">You need to enter a username and a password</string>
    <string name="about_child">About child:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="allergy">Allergy</string>
    <string name="disease">Disease</string>
    <string name="disability">Disability</string>
    <string name="if_yes">If Yes:</string>
    <string name="next">Next</string>
    <string name="food_habits">Food habits</string>
    <string name="sleeping_habits">Sleeping habits</string>
    <string name="other">Other</string>
    <string name="likes">Likes</string>
    <string name="fears">Fears</string>
    <string name="book">Book</string>
    <string name="finish">Finish</string>
    <string name="day">Day</string>
    <string name="activity">Activity</string>
    <string name="time">Time</string>
    <string name="synq">Synq with calendar</string>
    <string name="schedule">Schedule during inschool</string>
    <string name="equipment">What to bring for first school day</string>
    <string name="clothes"> &lt;u>Clothes &lt;/u></string>
    <string name="diapers"> &lt;u>iapers &lt;/u></string>
    <string name="sleep"> &lt;u>Sleep &lt;/u></string>
    <string name="name_on_children">Don\'t forget to write name on your child\'s belongings.</string>
    <string name="schedule_change">Obs! The schedule might change by request.</string>
    <string name="contact">Contact us at:</string>
    <string name="mail">Mail:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="sick_call">If sick, call:</string>
    <string name="map">Map: </string>
    <string name="open">Open:</string>
    <string name="evaluation_title">Evaluation of Smart Inskolning:\n</string>
    <string name="experience_app">How did the induction go?\n</string>
    <string name="info_clear_cb">Did you think the information was clear?\n</string>
    <string name="info_clear">If no, what can be improved?\n</string>
    <string name="ev_other">Other thoughts about the induction\n</string>
    <string name="ev_other2">Other thoughts about the application\n</string>
    <string name="ev_features">What other features would you like to see?\n</string>
    <string name="ev_experience_app">How did you think the use for the app went, and why?\n</string>
    <string name="saved">Saved!\n</string>
</resources>
