<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="h.ghg.dstdsg.smartinskolning.Activity_Routine">

    <ImageButton
        android:id="@+id/ibMenu"
        android:layout_width="96px"
        android:layout_height="96px"
        android:background="@drawable/menu_button"/>
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/default_text_size"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/text"/>
    <View
        android:id="@+id/vLine"
        android:layout_width="fill_parent"
        android:layout_below="@id/ibMenu"
        android:layout_height="2dp"
        android:background="@color/background_darker"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_below="@id/vLine"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <TextView
        android:id="@+id/tvRoutine_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_routine_title"
        android:textSize="@dimen/default_text_size"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvRoutine_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_routine_message"
        android:layout_below="@id/tvRoutine_Title"
        android:textSize="@dimen/default_text_size_message"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_routine_questions_call"
        android:layout_below="@id/tvRoutine_Message"
        android:textSize="@dimen/default_text_size_message"
        android:paddingLeft="@dimen/activity_horizontal_margin_login"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvCall_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_routine_number"
        android:layout_below="@id/tvRoutine_Message"
        android:layout_toRightOf="@id/tvCall"
        android:textSize="@dimen/default_text_size_message"
        android:layout_centerHorizontal="true"
        android:autoLink="phone"
        android:textColor="@color/black"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
