
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="h.ghg.dstdsg.smartinskolning.Activity_Equipment"
    android:layout_width="fill_parent">

    <include
        android:id="@+id/inlHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
        />

    <TextView
        android:id="@+id/tvEquipment_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/default_text_size_message_title"
        android:layout_below="@id/inlHeader"
        android:textColor="@color/black"
        android:text="@string/equipment"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tvEquipment_Title"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size_message"
        android:id="@+id/tvEquipment_list"
        android:text="\u2022 Regnjacka med galonbyxor"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_on_children"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_message"/>

</LinearLayout>
    <TextView
        android:id="@+id/tvSchedule_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_routine_questions_call"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/default_text_size_message"
        android:paddingLeft="@dimen/activity_horizontal_margin_login"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvCall_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_routine_number"
        android:layout_toRightOf="@id/tvSchedule_questions"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/default_text_size_message"
        android:layout_centerHorizontal="true"
        android:autoLink="phone"
        android:textColor="@color/black"/>

</RelativeLayout>
</ScrollView>