<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="h.ghg.dstdsg.smartinskolning.Activity_About_Child_1">

    <ImageButton
        android:id="@+id/ibMenu"
        android:layout_width="96px"
        android:layout_height="96px"
        android:background="@drawable/menu_button"/>
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/default_text_size"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/text"/>
    <View
        android:id="@+id/vLine"
        android:layout_width="fill_parent"
        android:layout_below="@id/ibMenu"
        android:layout_height="2dp"
        android:background="@color/background_darker"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_About_Child"
        android:layout_below="@id/vLine"
        android:text="@string/about_child"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_below="@id/tv_About_Child"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_height="wrap_content"
        android:id="@+id/llAllergy_Top">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/weight_sum_space_checkbox"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAllergy_Bot"
        android:text="@string/food_habits"
        android:textSize="@dimen/default_text_small_size"
        android:textColor="@color/black"
        android:id="@+id/tv_allergy_yes"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_allergy_yes"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:lines="5"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:id="@+id/et_allergy_yes"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_allergy_yes"
        android:textSize="@dimen/default_text_small_size"
        android:textColor="@color/black"
        android:text="@string/sleeping_habits"
        android:id="@+id/tv_disease_yes"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_disease_yes"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:lines="5"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:id="@+id/et_disease_yes"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonlogin"
        android:textColor="@color/text"
        android:text="@string/next"
        android:id="@+id/btnabout_child_next"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:paddingBottom="15dp"
        android:text="1/3"/>
</RelativeLayout>
