<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin_login"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity_Login">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:textSize="@dimen/default_text_size_title"
        android:gravity="center_horizontal"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        android:text="@string/username"
        android:paddingTop="64dp"
        android:layout_below="@id/tvTitle"
        android:gravity="left"/>
    <EditText
        android:id="@+id/etUsername"
        android:textSize="@dimen/default_text_size_message"
        android:textColor="@color/black"
        android:layout_below="@id/tvUserName"
        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:inputType="text"
        android:minWidth="128dp"
        android:layerType="software"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/black"
        android:paddingTop="48dp"
        android:layout_below="@id/etUsername"
        android:text="@string/password"
        android:gravity="left"/>
    <EditText
        android:id="@+id/etPassword"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@id/tvPassword"
        android:background="@drawable/edittextstyle"
        android:paddingTop="10dp"
        android:inputType="textPassword"
        android:minWidth="128dp"
        android:textColor="@color/black"
        android:layerType="software"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/default_text_size"
        android:background="@drawable/buttonlogin"
        android:text="@string/login"
        android:textColor="@color/text"
        android:layout_below="@id/etPassword" />
    <HorizontalScrollView
        android:id="@+id/hsvLanguages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingRight="@dimen/activity_horizontal_margin_login"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:src="@drawable/flag_swedish"
 />
            <ImageView
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flag_brittish"/>


            </LinearLayout>


        </HorizontalScrollView>

</RelativeLayout>
