<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:fillViewport="true"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="h.ghg.dstdsg.smartinskolning.Activity_About_Child_1">

    <include
        android:id="@+id/inlHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_About_Child"
        android:layout_below="@id/inlHeader"
        android:text="@string/about_child"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_below="@id/tv_About_Child"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_height="wrap_content"
        android:id="@+id/llAllergy_Top">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/weight_sum_space_checkbox"/>

    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fearGroup"
        android:layout_below="@id/llAllergy_Top"
        layout="@layout/fill_form"/>
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/likesGroup"
        android:layout_below="@id/fearGroup"
        layout="@layout/fill_form"/>
    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otherGroup"
        android:layout_below="@id/likesGroup"
        layout="@layout/fill_form"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonlogin"
        android:textColor="@color/text"
        android:text="@string/next"
        android:id="@+id/btnabout_child_finish"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonlogin"
        android:textColor="@color/text"
        android:text="@string/book"
        android:id="@+id/btnabout_child_book"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black"
        android:paddingBottom="15dp"
        android:text="3/3"/>
</RelativeLayout>
</ScrollView>